compi_tests_W24-main/hw5/tests/test43.out
lli: hw5/tests/temp_test43.ill.res:1:1: error: expected top-level entity
line 7: type mismatch
^
